apps/HomeBridge/overlays/prod/HTTPRoutes/homebridge-prod-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge-https
  namespace: homebridge
spec:
  parentRefs:
  - name: edge-web
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
    - homebridge.test.home.dblanchet.net
  rules:
  - backendRefs:
    - name: homebridge
      port: 8581
    matches:
    - path:
        type: PathPrefix
        value: /
