apps/HomeBridge/overlays/prod/HTTPRoutes/homebridge-prod-secure-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge-secure-route
  namespace: homebridge
spec:
  parentRefs:
    - name: scdb-gateway
      namespace: default
      sectionName: https-prod-homebridge
  hostnames:
    - homebridge.prod.home.dblanchet.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homebridge
          port: 8581
